monolith/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: monolith
  name: monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: monolith
    spec:
      containers:
      - image: monolith:1.0.0
        name: monolith
        resources: {}
status: {}
