monolith/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monolith
  name: monolith
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: monolith
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
