monolith/ingress.yml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monolith
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: google-monolith.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  monolith
                port:
                  number: 8080
